k8s/project-manager-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-manager-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-manager-ui
  template:
    metadata:
      labels:
        app: project-manager-ui
    spec:
      containers:
        - name: project-manager-ui
          image: ghcr.io/janne6565/project-manager-frontend:v1.2.0
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 10
