k8s/project-manager-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-manager-ui
spec:
  selector:
    app: project-manager-ui
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
